----------------------------------
SVN version: ?????

Heads up!
~~~~~~~~~

RFCs
~~~~
- Implemented RFC #0176 - Scriptlet URL handler classes
  (hinckel)

Bugfixes
~~~~~~~~
- Fix error in rdbms.sybase.SybaseDialect, the cast SQL function had flipped
  Arguments.
  (wagner)
- Set default encoding in JsonMessage to UTF-8 since JsonEncoder/JsonDecoder
  always encodes stuff in UTF-8
  (hinckel)

Features
~~~~~~~~


Version 5.7.0, released 2008-11-24
----------------------------------
SVN version: 12656

Heads up!
~~~~~~~~~
- Deprecated util.cmd.Runner class, this is now in xp.command in the 
  tools-xar (part of RFC #0173 implementation)
  (friebe)
- Removed class util.profiling.ClassProfiler
  (kiesel)
- Deprecated LOGGER_* global constants in util.log.LogCategory in favor
  of class constants in util.log.LogLevel
  (friebe)
- Deprecated HTTP_* global constants in peer.http.HttpConstants in favor
  of class constants
  (friebe)
- Removed package util.io and class util.io.VirtualFileManager and
  io.EmbeddedFile
  (kiesel)
  
RFCs
~~~~
- Implemented RFC #0173 - xp-tools.xar
  (friebe)
- Implemented RFC #0164 - Exceptions for XPClass::get*()
  (friebe)

Bugfixes
~~~~~~~~
- Fixed img.util.ExifData::flashUsed() method
  (friebe)
- Fixed unittest.AssertionFailedError not to hide the actual location
  in the stacktrace.
  (friebe)
- Made message part optional in HTTP status response when parsing it in
  peer.http.HttpResponse::readHeader()
  (hinckel)
- Fixed functionality of peer.ldap.LDAPQuery::getAttrsOnly()
  (wagner)

Features
~~~~~~~~
- Switched from is_callable() to method_exists() in classloading parts 
  of the core for performance reasons.
  (friebe)
- Added support for io.streams API to StreamReader and StreamWriter
  from the img.io package (keeping backwards compatibility)
  http://news.xp-framework.net/article/279/2008/10/21
  (friebe)
- Added peer.ftp.collections package - bridge between peer.ftp and 
  io.collections
  (friebe)