@@ -14,3 +14,6 @@ class="net.xp_framework.unittest.peer.http.HttpResponseTest"
 
 [stream]
 class="net.xp_framework.unittest.peer.http.HttpInputStreamTest"
+
+[connection]
+class="net.xp_framework.unittest.peer.http.HttpConnectionTest"
